Fix functional testing again

--- a/func_tests/CMakeLists.txt
+++ b/func_tests/CMakeLists.txt
@@ -2,3 +2,18 @@ project(FuncTests)
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/runtests.sh
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/splitcode_example_config.txt
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/A_1.fastq.gz
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/A_2.fastq.gz
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/B_1.fastq.gz
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/B_2.fastq.gz
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
