expanded functional tests

--- a/func_tests/CMakeLists.txt
+++ b/func_tests/CMakeLists.txt
@@ -6,6 +6,12 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/runtests.sh
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/splitcode_example_config.txt
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/splitcode_example_config_2.txt
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/splitcode_example_config_3.txt
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/A_1.fastq.gz
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
