--- a/func_tests/CMakeLists.txt
+++ b/func_tests/CMakeLists.txt
@@ -11,6 +11,15 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/splitcode_example_config_2.txt
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/splitcode_example_config_3.txt
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+     
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/splitcode_example_config_4.txt
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+     
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/odd.txt
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+     
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/even.txt
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/A_1.fastq.gz
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
