--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,12 +32,12 @@ else()
     message(FATAL_ERROR "zlib not found. Required for reading FASTQ files" )
 endif( ZLIB_FOUND )
 
-if (NOT NO_ZLIBNG)
+if (ZLIBNG)
     add_definitions(-DSPLITCODE_USE_ZLIB_NG)
     include_directories(../ext/zlib-ng/build)
     include_directories(../ext/zlib-ng)
     target_link_libraries(splitcode ${CMAKE_CURRENT_SOURCE_DIR}/../ext/zlib-ng/build/libz-ng.a)
-endif(NOT NO_ZLIBNG)
+endif(ZLIBNG)
 
 if(LINK MATCHES static)
     if (UNIX AND NOT APPLE)
