--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,20 @@ on:
   workflow_dispatch:
 
 jobs:
+  build-windows:
+    name: Build Windows
+    runs-on: windows-2022
+    env:
+      RELEASE_OS: windows
+    steps:
+      - name: checkout branch
+        uses: actions/checkout@master
+      - name: Setup environment
+        id: setup
+        run: echo ::set-output name=RELEASE_VERSION::${GITHUB_REF##*/}
+      - name: make
+        run: |
+          mkdir build && cd build && cmake .. && make && make install && cd ..
   build-linux:
     name: Build and test linux
     runs-on: ubuntu-22.04
