--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
         run: echo ::set-output name=RELEASE_VERSION::${GITHUB_REF##*/}
       - name: make
         run: |
-          mkdir build && cd build && cmake .. && make && make install && cd ..
+          mkdir build && cd build && cmake .. -DZLIBNG=ON && make && make install && cd ..
   build-linux:
     name: Build and test linux
     runs-on: ubuntu-22.04
