--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -38,7 +38,11 @@ if (ZLIBNG)
     add_definitions(-DSPLITCODE_USE_ZLIB_NG)
     include_directories(../ext/zlib-ng/build)
     include_directories(../ext/zlib-ng)
+    if(WIN32)
+    target_link_libraries(splitcode ${CMAKE_CURRENT_SOURCE_DIR}/../ext/zlib-ng/build/libz-ng.lib)
+    else()
     target_link_libraries(splitcode ${CMAKE_CURRENT_SOURCE_DIR}/../ext/zlib-ng/build/libz-ng.a)
+    endif(WIN32)
 endif(ZLIBNG)
 
 if(LINK MATCHES static)
