--- a/func_tests/CMakeLists.txt
+++ b/func_tests/CMakeLists.txt
@@ -32,3 +32,9 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/B_1.fastq.gz
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/B_2.fastq.gz
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/b.fastq
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/configb.txt
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
