add htslib build instructions

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,6 +45,17 @@ if (ZLIBNG)
     endif(WIN32)
 endif(ZLIBNG)
 
+if (USE_HTSLIB)
+    include_directories(../ext/htslib)
+    if(WIN32)
+    target_link_libraries(splitcode ${CMAKE_CURRENT_SOURCE_DIR}/../ext/htslib/libhts.lib)
+    else()
+    target_link_libraries(splitcode ${CMAKE_CURRENT_SOURCE_DIR}/../ext/htslib/libhts.a)
+    endif(WIN32)
+else()
+    add_definitions(-DNO_HTSLIB)
+endif()
+
 if(LINK MATCHES static)
     if (UNIX AND NOT APPLE)
         target_link_libraries(splitcode librt.a)
