--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
         run: echo ::set-output name=RELEASE_VERSION::${GITHUB_REF##*/}
       - name: make
         run: |
-          mkdir build && cd build && cmake .. -DZLIBNG=ON -DBUILD_FUNCTESTING=ON && make && make install && cd ..
+          mkdir build && cd build && cmake .. -DZLIBNG=ON -DBUILD_FUNCTESTING=ON -DNO_HTSLIB=ON && make && make install && cd ..
       - name: Functional testing
         run: |
           cd build && make test
