--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,12 +36,12 @@ endif(NOT ZLIBNG)
 
 if (ZLIBNG)
     add_definitions(-DSPLITCODE_USE_ZLIB_NG)
-    include_directories(../ext/zlib-ng/build)
+    include_directories(../ext/zlib-ng/zlib-ng)
     include_directories(../ext/zlib-ng)
     if(WIN32)
-    target_link_libraries(splitcode ${CMAKE_CURRENT_SOURCE_DIR}/../ext/zlib-ng/build/libz-ng.lib)
+    target_link_libraries(splitcode ${CMAKE_CURRENT_SOURCE_DIR}/../ext/zlib-ng/zlib-ng/libz.lib)
     else()
-    target_link_libraries(splitcode ${CMAKE_CURRENT_SOURCE_DIR}/../ext/zlib-ng/build/libz-ng.a)
+    target_link_libraries(splitcode ${CMAKE_CURRENT_SOURCE_DIR}/../ext/zlib-ng/zlib-ng/libz.a)
     endif(WIN32)
 endif(ZLIBNG)
 
