Updated functional tests

--- a/func_tests/CMakeLists.txt
+++ b/func_tests/CMakeLists.txt
@@ -38,3 +38,13 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/b.fastq
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/configb.txt
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/test_1.vcf.gz
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/test_2.vcf.gz
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/vcf_validation.fa.gz
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
