--- a/func_tests/CMakeLists.txt
+++ b/func_tests/CMakeLists.txt
@@ -48,3 +48,6 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/test_2.vcf.gz
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/vcf_validation.fa.gz
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/example.SJ.tab
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
