--- a/func_tests/CMakeLists.txt
+++ b/func_tests/CMakeLists.txt
@@ -51,3 +51,27 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/vcf_validation.fa.gz
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/example.SJ.tab
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/nest.test.1.R1.fa
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/nest.test.1.R1.fq
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/nest_config.txt
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/nest_config_2.txt
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/nest.test.1.R2.fq
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/nest.test.2.R1.fq
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/nest.test.2.R2.fq
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/nest_config_3.txt
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
