put functional tests for --barcode-encode

--- a/func_tests/CMakeLists.txt
+++ b/func_tests/CMakeLists.txt
@@ -75,3 +75,12 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/nest.test.2.R2.fq
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/nest_config_3.txt
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/nest.test.3.R1.fq
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/config_fastassign.txt
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/config_fastassign_2.txt
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
