--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -50,7 +50,11 @@ if (USE_HTSLIB)
     if(WIN32)
     target_link_libraries(splitcode ${CMAKE_CURRENT_SOURCE_DIR}/../ext/htslib/libhts.lib)
     else()
+if(ZLIBNG)
+    target_link_libraries(splitcode ${CMAKE_CURRENT_SOURCE_DIR}/../ext/htslib/libhts.a ${CMAKE_CURRENT_SOURCE_DIR}/../ext/zlib-ng/zlib-ng/libz.a)
+else()
     target_link_libraries(splitcode ${CMAKE_CURRENT_SOURCE_DIR}/../ext/htslib/libhts.a)
+endif(ZLIBNG)
     endif(WIN32)
 else()
     add_definitions(-DNO_HTSLIB)
