--- a/func_tests/CMakeLists.txt
+++ b/func_tests/CMakeLists.txt
@@ -78,6 +78,9 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/nest_config_3.txt
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/nest.test.3.R1.fq
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/nest_config_4.txt
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/config_fastassign.txt
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
