--- a/func_tests/CMakeLists.txt
+++ b/func_tests/CMakeLists.txt
@@ -81,6 +81,9 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/nest.test.3.R1.fq
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/nest_config_4.txt
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/nest_config_5.txt
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/config_fastassign.txt
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
