update functional tests

--- a/func_tests/CMakeLists.txt
+++ b/func_tests/CMakeLists.txt
@@ -90,3 +90,6 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/config_fastassign.txt
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/config_fastassign_2.txt
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/from_name.fq
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
