--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,10 +13,19 @@ endif()
 
 if(${CMAKE_VERSION} VERSION_LESS 3.1)
     add_compile_options(-std=c++11)
+    message("using C++11")
 else()
     set(CMAKE_CXX_STANDARD 11)
     set(CMAKE_CXX_STANDARD_REQUIRED ON)
     set(CMAKE_CXX_EXTENSIONS OFF)
+    include(CheckCXXCompilerFlag)
+    check_cxx_compiler_flag("-std=c++17" COMPILER_SUPPORTS_CXX17)
+    if (COMPILER_SUPPORTS_CXX17)
+        set(CMAKE_CXX_STANDARD 17)
+        message("using C++17")
+    else()
+        message("using C++11")
+    endif()
 endif()
 
 if(LINK MATCHES static)
