--- a/func_tests/CMakeLists.txt
+++ b/func_tests/CMakeLists.txt
@@ -96,3 +96,12 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/config_fastassign_2.txt
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/from_name.fq
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/smR1.fastq.gz
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/smR2.fastq.gz
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/config_sm.txt
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
